--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
-install: true
-script: true
+node_js: 10
+install:
+  - . npm.sh ci
+script:
+  - . npm.sh run ci
 deploy:
   provider: pages
   github_token: $GITHUB_TOKEN
