Package.json: script: build:

--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "Programming assignment of the course found at https://btholt.github.io/intro-to-web-dev-v2/js-project",
   "main": "index.html",
-  "config": {
-    "port": 3000
-  },
   "scripts": {
     "start": "serve --no-clipboard",
     "test": "cypress run",
-    "ci": "start-server-and-test 5000"
+    "ci": "start-server-and-test 5000",
+    "build" : "rm -rf public && mkdir public && cp index.html default.css normalize.css calculate.js ./public"
   },
   "repository": {
     "type": "git",
@@ -22,8 +20,9 @@
   },
   "homepage": "https://github.com/gomain/intro-to-web-dev-v2-calculater#readme",
   "devDependencies": {
+    "cypress": "3.4.1",
+    "now": "^16.3.0",
     "serve": "^11.2.0",
-    "start-server-and-test": "^1.10.2",
-    "cypress": "3.4.1"
+    "start-server-and-test": "^1.10.2"
   }
 }
